feat(onboarding): integrate i18n for onboarding steps and notifications
- Added translation support for AI configuration, completion, and notifications steps.
- Updated text in various components to use translation keys.
- Enhanced user experience by localizing onboarding messages and instructions.

feat(theme): implement theme context for user preferences

- Created ThemeContext to manage theme preferences (light, dark, system).
- Integrated theme selection in the SettingsPage with visual feedback for saving preferences.
- Ensured theme settings are fetched and updated based on user authentication.

feat(settings): add appearance settings tab

- Introduced an AppearanceSection in the SettingsPage for theme customization.
- Provided options for users to select their preferred theme with descriptions.
- Displayed current theme and loading states for user feedback.

chore(i18n): update localization files for new keys

- Added new translation keys for appearance settings in English and French.
- Ensured all new UI elements have corresponding translations for a consistent user experience.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -94,11 +94,13 @@
     "subtitle": "Configure your AI providers and assign models to different tasks.",
     "tabs": {
       "providers": "AI Providers",
+      "appearance": "Appearance",
       "models": "Model Configuration",
       "secrets": "Secrets & API Keys",
       "listening": "Continuous Listening"
     },
     "providers": {
+      "title": "AI Providers",
       "addProvider": "Add Provider",
       "noProvidersConfigured": "No providers configured.",
       "editProvider": "Edit Provider",
@@ -122,6 +124,25 @@
       "notifications": "Visual and sound notification settings",
       "memoryRecorded": "Memory Recorded",
       "notifyWhenSaved": "Notify when speech is saved to memory"
+    },
+    "appearance": {
+      "title": "Appearance",
+      "subtitle": "Choose a theme or follow your device preference.",
+      "description": "Pick a color scheme that matches your workflow. The choice is stored in your preferences for future sessions.",
+      "sectionTitle": "Theme",
+      "options": {
+        "system": "Follow system preference",
+        "light": "Light mode",
+        "dark": "Dark mode"
+      },
+      "descriptions": {
+        "system": "Automatically syncs with macOS, Windows, or Linux appearance.",
+        "light": "For a bright and airy interface with high contrast.",
+        "dark": "Keeps the workspace dark for low-light sessions."
+      },
+      "current": "Currently using: {{theme}}",
+      "saving": "Saving preference...",
+      "loading": "Loading saved preference..."
     }
   },
   "memory": {
@@ -345,6 +366,7 @@
       "skip": "Skip for now",
       "continue": "Continue",
       "complete": "Complete Setup",
+      "completing": "Completing...",
       "skipChannel": "Skip This Channel",
       "continueWithoutNotifications": "Continue Without Notifications",
       "setUpLater": "Set Up Later"
