feat: ajouter la prise en charge du chat flottant avec des messages de réflexion

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -507,6 +507,9 @@
     "thinking": "Thinking...",
     "dismissNotification": "Dismiss notification"
   },
+  "floatingChat": {
+    "thinking": "Thinking..."
+  },
   "training": {
     "passphrase": "My voice is my password",
     "page": {
