--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -466,6 +466,9 @@
     "thinking": "Réflexion en cours...",
     "dismissNotification": "Fermer la notification"
   },
+  "floatingChat": {
+    "thinking": "Réflexion en cours..."
+  },
   "training": {
     "passphrase": "Ma voix est mon mot de passe",
     "recordSamples": {
