--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1244,102 +1244,164 @@
   },
   "landing": {
     "brandName": "Second Brain",
-    "brandTagline": "Local-first memory OS",
+    "brandTagline": "Your AI-powered memory",
     "github": "GitHub",
+    "docs": "Docs",
     "cta": {
-      "openDashboard": "Open dashboard",
-      "continueOnboarding": "Continue onboarding",
-      "getStarted": "Get started"
+      "openDashboard": "Open Dashboard",
+      "continueOnboarding": "Continue Setup",
+      "getStarted": "Get Started"
     },
     "hero": {
-      "pill": "Private, proactive, local-first",
-      "title": "A calm cognitive operating system for your life",
-      "subtitle": "Capture interactions, structure knowledge, and surface the right memories at the right time.",
-      "inspiredBy": "Inspired by Clawd",
+      "pill": "Open source • Self-hosted • Private",
+      "titleLine1": "The AI that actually",
+      "titleLine2": "remembers everything.",
+      "subtitle": "Capture your thoughts, conversations, and decisions. Let AI organize, summarize, and surface the right memories at the right time—all running locally on your machine.",
+      "viewSource": "View source",
       "highlights": {
-        "summaries": "Daily to yearly summaries",
-        "privacy": "Privacy built-in"
+        "privacy": "100% Private",
+        "local": "Runs locally",
+        "proactive": "Proactive coaching"
       }
     },
-    "metrics": {
-      "title": "System signals",
-      "badge": "Live sync",
-      "cards": {
-        "memories": "Memories",
-        "tools": "Tools",
-        "summaries": "Summaries",
-        "signals": "Accuracy"
-      },
-      "sampleQuote": "“Show me decisions from the past week about the roadmap.”"
+    "whatItDoes": {
+      "kicker": "What it does",
+      "title": "Your personal cognitive operating system",
+      "features": {
+        "memory": {
+          "title": "Continuous Memory",
+          "description": "Automatically captures interactions and structures them with semantic understanding. Everything is searchable by meaning, not just keywords."
+        },
+        "voice": {
+          "title": "Speaker Recognition",
+          "description": "Train voice profiles with ECAPA-TDNN neural networks. Know who's speaking and filter out background noise automatically."
+        },
+        "search": {
+          "title": "Semantic Search",
+          "description": "Ask questions naturally. Find memories by meaning using vector embeddings. \"What did I decide about the roadmap last week?\""
+        },
+        "proactive": {
+          "title": "Proactive Coach",
+          "description": "Your personal AI coach analyzes patterns to help with health, productivity, and goals. Gentle nudges, never pushy."
+        },
+        "summaries": {
+          "title": "Time-Scale Summaries",
+          "description": "Daily insights become weekly patterns, monthly reviews, and yearly reflections. Knowledge compounds over time."
+        },
+        "privacy": {
+          "title": "Privacy First",
+          "description": "Self-hosted with encrypted storage. Zero telemetry. Your data never leaves your infrastructure."
+        },
+        "aiModels": {
+          "title": "Any AI Model",
+          "description": "Use the best AI providers like OpenAI, Anthropic, or Google Gemini. Or run models locally with Ollama, LM Studio, or any OpenAI-compatible endpoint for complete privacy.",
+          "local": "Local Models"
+        },
+        "tools": {
+          "title": "Tools & Skills",
+          "description": "Extend your AI with custom tools and skills. Browse the web, execute code, call APIs, automate tasks—all with built-in safety guardrails.",
+          "examples": "Web browsing, code execution, API calls, and more"
+        }
+      }
     },
-    "pillars": {
-      "kicker": "Core pillars",
-      "title": "A full-stack memory layer",
-      "subline": "Designed for fast recall and calm autonomy"
+    "howItWorks": {
+      "kicker": "How it works",
+      "title": "From chaos to clarity",
+      "subtitle": "A continuous loop that transforms raw interactions into actionable knowledge.",
+      "steps": {
+        "capture": {
+          "title": "Capture",
+          "description": "Voice, text, or API. Record thoughts, conversations, and decisions as they happen."
+        },
+        "understand": {
+          "title": "Understand",
+          "description": "AI classifies intent, filters noise, and extracts meaning from every input."
+        },
+        "remember": {
+          "title": "Remember",
+          "description": "Vectorized and indexed for instant semantic retrieval across any timeframe."
+        },
+        "assist": {
+          "title": "Assist",
+          "description": "Proactive insights, contextual answers, and automated tasks when you need them."
+        }
+      }
     },
-    "features": {
-      "intentRouter": {
-        "pill": "Intent Router",
-        "title": "Classify every input",
-        "description": "Route questions, commands, and reflections with low latency."
+    "proactive": {
+      "badge": "Proactive Agent",
+      "title": "An AI coach that actually helps",
+      "description": "Runs twice daily to analyze your patterns and provide actionable suggestions. Monitors your wellbeing, tracks goals, and helps build better habits—all without being invasive.",
+      "features": {
+        "health": "Health & wellbeing monitoring",
+        "goals": "Goal progress tracking",
+        "habits": "Habit formation support",
+        "schedule": "Smart scheduling suggestions"
       },
-      "memoryEngine": {
-        "pill": "Memory Engine",
-        "title": "Store with context",
-        "description": "Hybrid storage with embeddings, metadata, and summaries."
+      "sample1": {
+        "title": "Time for a break",
+        "desc": "You've been working for 4 hours straight. Consider a 15-minute walk."
       },
-      "proactiveCoach": {
-        "pill": "Proactive Agent",
-        "title": "Gentle daily coaching",
-        "description": "Non-invasive nudges across health, goals, and habits."
+      "sample2": {
+        "title": "Goal milestone reached",
+        "desc": "You've completed 80% of your Q1 reading goal. Keep it up!"
       },
-      "toolExecutor": {
-        "pill": "Tool Executor",
-        "title": "Safe automation",
-        "description": "Run tools with guardrails, logs, and approvals."
-      },
-      "noiseFilter": {
-        "pill": "Noise Filter",
-        "title": "Ignore the noise",
-        "description": "Filter background chatter and keep only meaningful data."
-      },
-      "privacyFirst": {
-        "pill": "Privacy First",
-        "title": "Local-first by default",
-        "description": "Nothing leaves your infrastructure in local mode."
+      "sample3": {
+        "title": "Habit streak: 7 days",
+        "desc": "Your morning routine is becoming consistent. Great progress!"
       }
     },
     "timeline": {
       "kicker": "Time-scale summaries",
-      "title": "Summaries that grow with you",
-      "subtitle": "Daily context becomes long-term insight through a cascade of rollups.",
+      "title": "Knowledge that compounds",
+      "subtitle": "Daily context becomes long-term insight through a cascade of intelligent summaries.",
       "items": {
         "daily": {
           "label": "Daily",
-          "detail": "Capture key moments and decisions."
+          "detail": "Key moments & decisions"
         },
         "weekly": {
           "label": "Weekly",
-          "detail": "Spot patterns and momentum."
+          "detail": "Patterns & momentum"
         },
         "monthly": {
           "label": "Monthly",
-          "detail": "Review projects and goals."
+          "detail": "Projects & goals review"
         },
         "quarterly": {
           "label": "Quarterly",
-          "detail": "Make strategic adjustments."
+          "detail": "Strategic adjustments"
         },
         "yearly": {
           "label": "Yearly",
-          "detail": "Reflect on long-term growth."
+          "detail": "Long-term growth"
         }
       }
     },
+    "quickStart": {
+      "kicker": "Quick start",
+      "title": "Up and running in 60 seconds",
+      "subtitle": "Clone, setup, and launch. Docker handles the rest.",
+      "starRepo": "Star on GitHub"
+    },
+    "features": {
+      "title": "Everything you need for a second brain",
+      "subtitle": "Built for privacy-conscious users who want AI assistance without compromising their data.",
+      "list": {
+        "voiceProfiles": "Voice profiles with speaker recognition",
+        "semanticSearch": "Semantic search across all memories",
+        "multiScaleSummaries": "Multi-scale summaries (daily to yearly)",
+        "proactiveCoaching": "Proactive health & productivity coaching",
+        "noiseFilter": "Intelligent noise filtering",
+        "toolExecution": "Background tool execution with guardrails",
+        "aiModelsFlexible": "OpenAI, Anthropic, Gemini, or local models",
+        "customTools": "Extensible tools & skills system",
+        "encryptedStorage": "Encrypted local storage",
+        "localFirst": "Local-first, self-hosted architecture"
+      }
+    },
     "footer": {
-      "title": "Ready to build your second brain?",
-      "subtitle": "Start capturing knowledge with a system that respects your privacy.",
-      "star": "Star the repo"
+      "tagline": "Your AI-powered memory",
+      "copyright": "Open source under MIT License. Built for humans who value their privacy."
     }
   }
 }
